# Ask-My-Docs

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  MEMORY.md  README.md  ask-my-docs-brief.md  docker-compose.yml
.claude/: launch.json  settings.json
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  logging.py  main.py
backend/app/api/: dependencies.py  routes_chat.py  routes_docs.py
backend/app/graph/: __init__.py  build.py  deps.py  llm.py  nodes.py  schemas.py  state.py
backend/app/ingestion/: chunker.py  loader.py
backend/app/retrieval/: embedder.py  store.py
backend/tests/: conftest.py  graph_fakes.py  test_chunker.py  test_grade_rewrite.py  test_graph_e2e.py  test_router.py  test_routes_chat.py  test_routes_docs.py  test_store.py
frontend/: Dockerfile  README.md  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatPanel.tsx  DocumentSidebar.tsx  Message.tsx  SourceChips.tsx
frontend/lib/: api.ts  sse.ts  types.ts
mcp-server/: README.md  pyproject.toml  server.py
mcp-server/tests/: fakes.py  test_server.py
